--- a/src/main/resources/web/admIndex.html
+++ b/src/main/resources/web/admIndex.html
@@ -3,14 +3,229 @@
       th:replace="inc">
 <body>
 <div th:fragment="content">
-    <button onclick="test1()">test1</button>
-    页面中正文内容：采用th:include + th:replace方式进行页面布局123
+    <div style="display: flex;">
+        <div>
+            <div id="vehicleFreq" style="width: 650px;height:310px;flex: 1"></div>
+            <div id="income" style="width: 650px;height:310px;flex: 1"></div>
+
+        </div>
+        <div>
+            <div id="shopFreq" style="width: 650px;height:310px;flex: 1"></div>
+            <div id="freq" style="width: 650px;height:310px;flex: 1"></div>
+        </div>
+    </div>
+
+
 </div>
 <footer  th:fragment="footer">
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
-        function test1() {
-            console.log("test1");
+        $(function(){
+            $.ajax({
+                url:[[@{/statistics/getVehicleFreq}]],
+                type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    initVehicleFreq(result.obj[0], result.obj[1])
+                }else{
+                    toastr.error(result.msg);
+                }
+            }
+        });
+
+            $.ajax({
+                url:[[@{/statistics/getShopFreq}]],
+            type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    initShopFreq(result.obj[0], result.obj[1])
+                }else{
+                    toastr.error(result.msg);
+                }
+            }
+        });
+
+            $.ajax({
+                url:[[@{/statistics/getFreq}]],
+            type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    console.log(result);
+                    initFreq(result.obj[0], result.obj[1])
+                }else{
+                    toastr.error(result.msg);
+                }
+            }
+        });
+
+            $.ajax({
+                url:[[@{/statistics/getIncome}]],
+            type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    console.log(result);
+                    initIncome(result.obj[0], result.obj[1])
+                }else{
+                    toastr.error(result.msg);
+                }
+            }
+        });
+        });
+
+        function initVehicleFreq(data1,data2){
+            var vehicleFreq = echarts.init(document.getElementById('vehicleFreq'));
+            var option1 = {
+                title : {
+                    text: '车辆租赁次数',
+                    subtext: '总数',
+                    x:'center'
+                },
+                tooltip : {
+                    trigger: 'item',
+                    formatter: "{a} <br/>{b} : {c} ({d}%)"
+                },
+                legend: {
+                    orient: 'vertical',
+                    left: 'left',
+                    data: data1
+                },
+                series : [
+                    {
+                        name: '访问来源',
+                        type: 'pie',
+                        radius : '55%',
+                        center: ['50%', '60%'],
+                        data:data2,
+                        itemStyle: {
+                            emphasis: {
+                                shadowBlur: 10,
+                                shadowOffsetX: 0,
+                                shadowColor: 'rgba(0, 0, 0, 0.5)'
+                            }
+                        }
+                    }
+                ]
+            };
+            vehicleFreq.setOption(option1);
+        }
+
+        function initShopFreq(data1, data2){
+            var shopFreq = echarts.init(document.getElementById('shopFreq'));
+            var option2 = {
+                title : {
+                    text: '门店租赁次数',
+                    subtext: '总数',
+                    x:'center'
+                },
+                tooltip : {
+                    trigger: 'item',
+                    formatter: "{a} <br/>{b} : {c} ({d}%)"
+                },
+                legend: {
+                    orient: 'vertical',
+                    left: 'left',
+                    data: data1
+                },
+                series : [
+                    {
+                        name: '访问来源',
+                        type: 'pie',
+                        radius : '55%',
+                        center: ['50%', '60%'],
+                        data:data2,
+                        itemStyle: {
+                            emphasis: {
+                                shadowBlur: 10,
+                                shadowOffsetX: 0,
+                                shadowColor: 'rgba(0, 0, 0, 0.5)'
+                            }
+                        }
+                    }
+                ]
+            };
+            shopFreq.setOption(option2);
+
+        }
+
+        function initFreq(data1, data2){
+            var freq = echarts.init(document.getElementById('freq'));
+            var option3 = {
+                title : {
+                    text: '上周总租赁次数',
+                    x:'center'
+                },
+                tooltip : {
+                    trigger: 'axis'
+                },
+                xAxis: {
+                    type: 'category',
+                    data: data1
+                },
+                yAxis: {
+                    type: 'value'
+                },
+                series: [{
+                    name: '次数',
+                    data: data2,
+                    type: 'line'
+                }]
+            };
+
+            freq.setOption(option3);
+
+        }
+
+        function initIncome(data1,data2) {
+
+            // 基于准备好的dom，初始化echarts实例
+            var income = echarts.init(document.getElementById('income'));
+
+            // 指定图表的配置项和数据
+
+
+            var option4 = {
+                color: ['#3398DB'],
+                title: {
+                    text: '上周总收入',
+                    x: 'center'
+                },
+                tooltip : {
+                    trigger: 'axis',
+                    axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+                        type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+                    }
+                },
+                xAxis : [
+                    {
+                        type : 'category',
+                        data : data1,
+                        axisTick: {
+                            alignWithLabel: true
+                        }
+                    }
+                ],
+                yAxis : [
+                    {
+                        type : 'value'
+                    }
+                ],
+                series : [
+                    {
+                        name:'收入',
+                        type:'bar',
+                        barWidth: '60%',
+                        data:data2
+                    }
+                ]
+            };
+
+
+            // 使用刚指定的配置项和数据显示图表。
+            income.setOption(option4);
         }
         /*]]>*/
     </script>
